--- a/main.css
+++ b/main.css
@@ -207,7 +207,7 @@ a {
 }
 
 .home-button button {
-    background-color: #9b9e89; /* Green background */
+    background-color: #e0c188; /* Green background */
     color: white; /* White text */
     padding: 10px 10px; /* Some padding */
     border: none; /* No border */
