--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ p {
 }
 
 .home-button button {
-    background-color: #9b9e89; /* Green background */
+    background-color: #e0c188; /* Green background */
     color: white; /* White text */
     padding: 10px 10px; /* Some padding */
     border: none; /* No border */
